--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "peerDependencies": {
     "react": "^17.0.2",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "tailwindcss": "^3.0.24"
   },
   "husky": {
     "hooks": {
@@ -58,7 +59,6 @@
     "postcss": "^8.4.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "rollup-plugin-postcss": "^4.0.2",
     "size-limit": "^7.0.8",
     "styled-components": "*",
     "tailwindcss": "^3.0.24",
